--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== Version 7.3 / 2015-7-14    (Thanks samnissen)
+* Enhancements
+  * Allow users to override the browser screensize
+* Fixes
+  * Removed development puts commands
+  * Chrome no longer rejects using Javascript to rewize the window
+
 === Version 7.2 / 2014-12-12
 * Enhancements
   * Added iphone 5 and 6 variants (Thanks samnissen)
