--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+=== Version 7.4 / 2016-1-6
+* Enhancements
+  * Added support for iPad Pro and iPhone 6/6s (Thanks samnissen)
+
 === Version 7.3 / 2015-7-14    (Thanks samnissen)
 * Enhancements
   * Allow users to override the browser screensize
